# deep-compend

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pull_arxiv_paper.py  pyproject.toml  pytest.ini  requirements.txt  summarize.py
.github/workflows/: publish.yml
configs/: bart_large_config.json  bart_lora_config.json  t5_base_config.json  t5_small_config.json
deep_compend/: __init__.py  cli.py  summarizer.py  utils.py
deep_compend/cli/: cli.py  config.py  subcommands.py
deep_compend/core/: configs.py  summarizer.py
deep_compend/extractors/: __init__.py  keywords_extractor.py  pdf_extractor.py
deep_compend/text_preprocessing/: __init__.py  prettify.py
deep_compend/utils/: downloads.py  metrics.py
lora_finetuning/: arxiv_summarization_lora.ipynb
scripts/: run_bart_large.sh  run_bart_lora.sh  run_default.sh  run_t5_base.sh  run_t5_small.sh  run_t5_small_override.sh
summaries/: summary_report.txt  summary_report_bart_large.txt  summary_report_bart_lora.txt  summary_report_t5_base.txt  summary_report_t5_small.txt  summary_report_t5_small_overriden.txt
tests/: conftest.py  test_cleaning.py  test_cli.py  test_configs.py  test_keywords_extractor.py  test_prettify.py  test_summarizer.py  test_utils.py
tests/test_cli/: conftest.py  test_cli.py  test_subcommands.py
tests/test_cli/test_config/: test_default_config.py  test_load_config.py  test_merge_configs.py
tests/test_core/: conftest.py  test_summarizer.py
tests/test_extractors/: test_keywords_extractor.py  test_pdf_extractor.py
tests/test_text_preprocessing/: test_cleaning.py  test_prettify.py
tests/test_utils/: test_downloads.py  test_metrics.py
