[project]
name = "deep-compend"
version = "0.1.0"
description = "Summarization library with LoRA and CLI support"
authors = [{name = "Sergey Polivin", email = "s.polivin@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "torch==2.6.0",
    "transformers==4.50.0",
    "peft==0.15.0",
    "nltk==3.9.1",
    "pymupdf==1.25.4",
    "spacy==3.8.4"
]

[project.scripts]
deep-compend = "deep_compend.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["deep_compend"]
