[project]
name = "deep-compend"
version = "0.1.2"
description = "Library for scientific PDF-articles summarization"
authors = [{name = "Sergey Polivin", email = "s.polivin@gmail.com"}]
keywords = ["summarization", "arxiv", "NLP", "transformers"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.50.0",
    "peft>=0.15.0",
    "nltk>=3.9.1",
    "pymupdf>=1.25.4",
    "spacy>=3.8.4",
    "requests>=2.32.3"
]

[project.optional-dependencies]
test = ["pytest>=8.3.5"]
build = ["setuptools", "wheel", "build", "twine"]
linters = ["black", "isort", "pre-commit"]

[project.scripts]
deep-compend = "deep_compend.cli.cli:main"

[project.urls]
Homepage = "https://github.com/spolivin/deep-compend"
Issues = "https://github.com/spolivin/deep-compend/issues"
Pull-requests = "https://github.com/spolivin/deep-compend/pulls"
Source = "https://github.com/spolivin/deep-compend/tree/master/deep_compend"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["deep_compend*"]
exclude = ["tests*"]
